# nba-agent-maker

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  style.css
src/: character.rs  main.rs
src/rules/: character.rs  cherries.rs  drives.rs  general_skills.rs  investigative_skills.rs  maneuvers.rs  mod.rs  modes.rs
src/rules/general_skills/: cherries.rs  maneuvers.rs  mod.rs  name.rs  skill.rs
src/sheet_parts/: agent_info.rs  general_skills.rs  health_and_stability.rs  investigative_skills.rs  languages.rs  mod.rs
src/views/: agent_info.rs  general_skills_info.rs  head.rs  investigative_skills_info.rs  mod.rs  stats_info.rs
src/views/general_skills/: athletics.rs  conceal.rs  cover.rs  digital_intrusion.rs  disguise.rs  driving.rs  explosive_devices.rs  filch.rs  gambling.rs  general_skills_info.rs  hand_to_hand.rs  infiltration.rs  mechanics.rs  medic.rs  mod.rs  network.rs  piloting.rs  preparedness.rs  sense_trouble.rs  shooting.rs  shrink.rs  surveillance.rs  weapons.rs
src/views/investigative_abilities/: academic_abilities.rs  interpersonal_abilities.rs  investigative_abilities_info.rs  mod.rs  technical_abilities.rs
src/views/investigative_abilities/academic/: accounting.rs  archeology.rs  mod.rs
