[package]
name = "nba-agent-maker"
version = "0.1.0"
edition = "2024"

[dependencies]
codee = { version = "0.3.5", features = ["json_serde"] }
leptos = { version = "0.8.17", features = ["csr"] }
leptos-use = "0.18.3"
leptos_meta = "0.8.6"
serde = "1.0.228"



[package.metadata.leptos]
style-file = "style.css"
